--- a/index.html
+++ b/index.html
@@ -1,1 +1,80 @@
-scam day trade
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Day Trading Scam Resources</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Inter', sans-serif;
+            background-color: #f3f4f6;
+        }
+        .container {
+            max-width: 800px;
+            margin: auto;
+            padding: 2rem;
+        }
+        .card {
+            background-color: #ffffff;
+            border-radius: 12px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            padding: 2rem;
+        }
+    </style>
+</head>
+<body class="bg-gray-100 flex items-center justify-center min-h-screen p-4">
+
+<div class="container bg-white p-8 rounded-xl shadow-lg">
+    <header class="text-center mb-8">
+        <h1 class="text-3xl font-bold text-gray-800 mb-2">Staying Safe from Day Trading Scams</h1>
+        <p class="text-gray-600">Protect yourself by knowing the red flags and checking with official resources.</p>
+    </header>
+
+    <main class="space-y-8">
+        <div class="card">
+            <h2 class="text-2xl font-bold text-gray-800 mb-4 border-b-2 border-orange-500 pb-2">Common Red Flags</h2>
+            <ul class="list-disc list-inside space-y-2 text-gray-700">
+                <li><span class="font-bold">Unrealistic Guarantees:</span> Promises of high returns with little to no risk.</li>
+                <li><span class="font-bold">Pressure to Act Fast:</span> Urging you to "act now" before an opportunity is gone.</li>
+                <li><span class="font-bold">Unlicensed Brokers:</span> Check with official regulators like the SEC or FCA.</li>
+                <li><span class="font-bold">Fake Testimonials:</span> Reviews that seem too good to be true, often with stock photos.</li>
+                <li><span class="font-bold">Obfuscated Code:</span> Unreadable or hidden JavaScript in the website's source.</li>
+                <li><span class="font-bold">Inability to Withdraw Funds:</span> Excuses or delays when you try to pull your money out.</li>
+            </ul>
+        </div>
+
+        <div class="card">
+            <h2 class="text-2xl font-bold text-gray-800 mb-4 border-b-2 border-blue-500 pb-2">Official Takedown & Alert Websites</h2>
+            <p class="text-gray-700 mb-4">These organizations are on the front lines, providing warnings and working to shut down fraudulent operations.</p>
+            <ul class="space-y-4">
+                <li class="p-4 bg-gray-50 rounded-lg border border-gray-200">
+                    <h3 class="font-bold text-lg text-gray-800 mb-1">Financial Conduct Authority (FCA) - UK</h3>
+                    <p class="text-sm text-gray-600 mb-2">The FCA's <a href="https://www.fca.org.uk/consumers/scams" class="text-blue-600 hover:underline" target="_blank">ScamSmart</a> and <a href="https://www.fca.org.uk/consumers/warning-list" class="text-blue-600 hover:underline" target="_blank">Warning List</a> are excellent resources. They publish alerts about unauthorized firms and investment scams.</p>
+                </li>
+                <li class="p-4 bg-gray-50 rounded-lg border border-gray-200">
+                    <h3 class="font-bold text-lg text-gray-800 mb-1">Australian Securities and Investments Commission (ASIC)</h3>
+                    <p class="text-sm text-gray-600 mb-2">ASIC's <a href="https://moneysmart.gov.au/check-and-report-scams/investor-alert-list" class="text-blue-600 hover:underline" target="_blank">Investor Alert List</a> is regularly updated with entities that are fraudulent or impersonating legitimate businesses.</p>
+                </li>
+                <li class="p-4 bg-gray-50 rounded-lg border border-gray-200">
+                    <h3 class="font-bold text-lg text-gray-800 mb-1">U.S. Securities and Exchange Commission (SEC)</h3>
+                    <p class="text-sm text-gray-600 mb-2">The SEC's <a href="https://www.investor.gov/protect-your-investments/fraud/how-avoid-fraud" class="text-blue-600 hover:underline" target="_blank">Investor.gov</a> website provides tools and resources to help you check out a professional or firm's background.</p>
+                </li>
+                <li class="p-4 bg-gray-50 rounded-lg border border-gray-200">
+                    <h3 class="font-bold text-lg text-gray-800 mb-1">Federal Trade Commission (FTC)</h3>
+                    <p class="text-sm text-gray-600 mb-2">The FTC's <a href="https://reportfraud.ftc.gov/#/" class="text-blue-600 hover:underline" target="_blank">ReportFraud.ftc.gov</a> is where you can report scams. They also publish consumer alerts and advice.</p>
+                </li>
+            </ul>
+        </div>
+    </main>
+
+    <footer class="text-center mt-8 text-gray-500 text-sm">
+        <p>&copy; 2025 Scam Alert Project. All rights reserved.</p>
+    </footer>
+</div>
+
+</body>
+</html>
