Update footer text for Scam Daytrade

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </main>
 
     <footer class="text-center mt-8 text-gray-500 text-sm">
-        <p>&copy; 2025 Scam Alert Project. All rights reserved.</p>
+        <p>&copy; 2025 Scam Daytrade. All rights reserved.</p>
     </footer>
 </div>
 
